--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+blinker==1.9.0
+click==8.1.8
 Flask==2.3.2
-Flask-SQLAlchemy==3.0.5
 Flask-Login==0.6.2
-pandas==2.0.3
+Flask-SQLAlchemy==3.0.5
+greenlet==3.1.1
 gunicorn==20.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+numpy==2.2.2
+pandas==2.2.3
 psycopg2-binary==2.9.6
+python-dateutil==2.9.0.post0
+pytz==2025.1
+setuptools==75.8.0
+six==1.17.0
+SQLAlchemy==2.0.37
+typing_extensions==4.12.2
+tzdata==2025.1
+Werkzeug==2.3.7
