--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,20 +9,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout code
+      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Heroku CLI
+      # Step 2: Install Heroku CLI
       - name: Set up Heroku CLI
         run: |
           curl https://cli-assets.heroku.com/install.sh | sh
           echo "Heroku CLI installed"
 
-      # Step 3: Log in to Heroku using the API key
+      # Step 3: Log in to Heroku using the API key (explicit login process)
       - name: Log in to Heroku
         run: |
-          echo "${{ secrets.HEROKU_API_KEY }}" | heroku auth:token
+          echo ${{ secrets.HEROKU_API_KEY }} | heroku auth:token
+          echo "Logged in to Heroku successfully"
 
       # Step 4: Build the Docker container
       - name: Build Docker container
@@ -34,12 +35,12 @@ jobs:
         run: |
           docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
-      # Step 6: Release the Docker container on Heroku
+      # Step 6: Release Docker container
       - name: Release Docker container
         run: |
           heroku container:release web --app ${{ secrets.HEROKU_APP_NAME }}
 
-      # Step 7: Verify if the deployment is successful
+      # Step 7: Verify Heroku app status
       - name: Check Heroku app status
         run: |
           heroku apps:info --app ${{ secrets.HEROKU_APP_NAME }}
