--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,51 +1,59 @@
-name: Deploy to Heroku
+# Your workflow name.
+name: Deploy to heroku.
 
+# Run workflow on every push to main branch.
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
+# Your workflows jobs.
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout the code
-      - name: Checkout code
+      # Check-out your repository.
+      - name: Checkout
         uses: actions/checkout@v2
 
-      # Step 2: Clean repository (remove any leftover configurations or submodules)
-      - name: Clean repository
-        run: |
-          git clean -fdx
 
-      # Step 3: Install Heroku CLI
-      - name: Set up Heroku CLI
-        run: |
-          curl https://cli-assets.heroku.com/install.sh | sh
-          echo "Heroku CLI installed"
+### ⬇ IMPORTANT PART ⬇ ###
 
-      # Step 4: Log in to Heroku using the API key
-      - name: Log in to Heroku
-        run: |
-          echo ${{ secrets.HEROKU_API_KEY }} | heroku auth:token
-          echo "Logged in to Heroku successfully"
+      - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
+        uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
+        with:
+          # Below you must provide variables for your Heroku app.
 
-      # Step 5: Build Docker container
-      - name: Build Docker container
-        run: |
-          docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+          # The email address associated with your Heroku account.
+          # If you don't want to use repository secrets (which is recommended) you can do:
+          # email: my.email@example.com
+          email: ${{ secrets.HEROKU_EMAIL }}
+          
+          # Heroku API key associated with provided user's email.
+          # Api Key is available under your Heroku account settings.
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          
+          # Name of the heroku application to which the build is to be sent.
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
 
-      # Step 6: Push Docker container to Heroku
-      - name: Push Docker container to Heroku
-        run: |
-          docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+          # (Optional, default: "./")
+          # Dockerfile directory.
+          # For example, if you have a Dockerfile in the root of your project, leave it as follows:
+          dockerfile_directory: ./
 
-      # Step 7: Release Docker container
-      - name: Release Docker container
-        run: |
-          heroku container:release web --app ${{ secrets.HEROKU_APP_NAME }}
+          # (Optional, default: "Dockerfile")
+          # Dockerfile name.
+          dockerfile_name: Dockerfile
 
-      # Step 8: Verify Heroku app status
-      - name: Check Heroku app status
-        run: |
-          heroku apps:info --app ${{ secrets.HEROKU_APP_NAME }}
+          # (Optional, default: "")
+          # Additional options of docker build command.
+          docker_options: "--no-cache"
+
+          # (Optional, default: "web")
+          # Select the process type for which you want the docker container to be uploaded.
+          # By default, this argument is set to "web".
+          # For more information look at https://devcenter.heroku.com/articles/process-model
+          process_type: web
+          
+   
+          
+### ⬆ IMPORTANT PART ⬆ ###
